bk_ida/gccida/g1/ix86_expand_fp_compare
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:7941:30: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  ix86_expand_fp_compare( rtx_code code, rtx op0, rtx op1, rtx scratch, rtx *second_test, rtx *bypass_test) 
                             ^
                             enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:7944:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:7945:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v11; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:7946:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:8010:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code second_code; // [rsp+14h] [rbp-44h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:8011:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code first_code; // [rsp+18h] [rbp-40h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:8012:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code bypass_code[15]; // [rsp+1Ch] [rbp-3Ch] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/i386.c:8228:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 7655, "ix86_expand_fp_compare"); 
                             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_fp_compare/src/obj/i386.o] Error 1
